@@ -3,13 +3,11 @@ package com.anee.module5.SecurityApp.SecurityApplication.services;
 
 import com.anee.module5.SecurityApp.SecurityApplication.dto.PostDTO;
 import com.anee.module5.SecurityApp.SecurityApplication.entities.PostEntity;
-import com.anee.module5.SecurityApp.SecurityApplication.entities.User;
 import com.anee.module5.SecurityApp.SecurityApplication.exceptions.ResourceNotFoundException;
 import com.anee.module5.SecurityApp.SecurityApplication.repositories.PostRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.modelmapper.ModelMapper;
-import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -29,7 +27,7 @@ public class PostServiceImpl implements PostService{
                 .findAll()
                 .stream()
                 .map(postEntity -> modelMapper.map(postEntity, PostDTO.class))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -40,10 +38,6 @@ public class PostServiceImpl implements PostService{
 
     @Override
     public PostDTO getPostById(Long postId) {
-        User user = (User) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
-
-        log.info("User {} ", user);
-
         PostEntity postEntity = postRepository
                 .findById(postId)
                 .orElseThrow(() -> new ResourceNotFoundException("Post not found with id "+postId));
